<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui<br />film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan<br />update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk<br />transaksi tiket nonton</string>
    <string name="sing_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang,<br />Shalahuddin Ahmad Aziz</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="check_failed">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_up">Top Up Saldo</string>
    <string name="top_up_now">Top Up Sekarang</string>
    <string name="top_up_title">Top Up</string>
</resources>